--- a/public/index.html
+++ b/public/index.html
@@ -11,26 +11,26 @@
     <meta name='theme-color' content='#000000'>
     <base href='/'>
 
-    <link href='%PUBLIC_URL%/assets/tailwind-base.css' rel='stylesheet'>
+    <link href='assets/tailwind-base.css' rel='stylesheet'>
 
     <!--
           manifest.json provides metadata used when your web app is added to the
           homescreen on Android. See https://developers.google.com/web/fundamentals/engage-and-retain/web-app-manifest/
         -->
-    <link rel='manifest' href='%PUBLIC_URL%/manifest.json'>
-    <link rel='shortcut icon' href='%PUBLIC_URL%/favicon.ico'>
+    <link rel='manifest' href='manifest.json'>
+    <link rel='shortcut icon' href='favicon.ico'>
 
     <!--<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">-->
 
     <!--        You can choose main icon from variety of the material ui icon fonts-->
-    <link href='%PUBLIC_URL%/assets/fonts/material-design-icons/MaterialIconsOutlined.css' rel='stylesheet'>
-    <!--        <link href="%PUBLIC_URL%/assets/fonts/material-design-icons/MaterialIcons.css" rel="stylesheet">-->
-    <!--        <link href="%PUBLIC_URL%/assets/fonts/material-design-icons/MaterialIconsRound.css" rel="stylesheet">-->
-    <!--        <link href="%PUBLIC_URL%/assets/fonts/material-design-icons/MaterialIconsSharp.css" rel="stylesheet">-->
-    <!--        <link href="%PUBLIC_URL%/assets/fonts/material-design-icons/MaterialIconsTwoTone.css" rel="stylesheet">-->
+    <link href='assets/fonts/material-design-icons/MaterialIconsOutlined.css' rel='stylesheet'>
+    <!--        <link href="assets/fonts/material-design-icons/MaterialIcons.css" rel="stylesheet">-->
+    <!--        <link href="assets/fonts/material-design-icons/MaterialIconsRound.css" rel="stylesheet">-->
+    <!--        <link href="assets/fonts/material-design-icons/MaterialIconsSharp.css" rel="stylesheet">-->
+    <!--        <link href="assets/fonts/material-design-icons/MaterialIconsTwoTone.css" rel="stylesheet">-->
 
-    <link href='%PUBLIC_URL%/assets/fonts/inter/inter.css' rel='stylesheet'>
-    <link href='%PUBLIC_URL%/assets/fonts/meteocons/style.css' rel='stylesheet'>
+    <link href='assets/fonts/inter/inter.css' rel='stylesheet'>
+    <link href='assets/fonts/meteocons/style.css' rel='stylesheet'>
 
     <noscript id='emotion-insertion-point'></noscript>
     <!--
@@ -38,7 +38,7 @@
           It will be replaced with the URL of the `public` folder during the build.
           Only files inside the `public` folder can be referenced from the HTML.
 
-          Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
+          Unlike "/favicon.ico" or "favicon.ico", "favicon.ico" will
           work correctly both with client-side routing and a non-root public URL.
           Learn how to configure a non-root public URL by running `npm run build`.
         -->
